<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.register.RegisterFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:text="@string/register_welcome_label"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_welcome_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:alpha="0"
            android:text="@string/register_welcome_desc"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_welcome_label" />

        <com.miniapp.mystoryapplication.presentation.customview.CustomInputText
            android:id="@+id/register_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:focusableInTouchMode="true"
            android:hint="@string/name_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_register_welcome_desc" />

        <com.miniapp.mystoryapplication.presentation.customview.CustomInputText
            android:id="@+id/register_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:focusableInTouchMode="true"
            android:hint="@string/username_hint"
            app:layout_constraintTop_toBottomOf="@id/register_input_name" />

        <com.miniapp.mystoryapplication.presentation.customview.PasswordInputText
            android:id="@+id/register_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@id/register_input_email" />

        <include
            android:id="@+id/container_button_register"
            layout="@layout/layout_custom_progress_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/register_input_password" />

        <include
            android:id="@+id/container_loading_progress"
            layout="@layout/layout_loading_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
