<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/av_login_loading"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:transitionName="image_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:lottie_autoPlay="true"
            app:lottie_fileName="story_loading.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="4dp"
            android:alpha="0"
            android:text="@string/login_app_name_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_label_app_desc"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_app_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:alpha="0"
            android:text="@string/login_app_desc"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/av_login_loading"
            app:layout_constraintStart_toStartOf="parent" />

        <com.miniapp.mystoryapplication.presentation.customview.CustomInputText
            android:id="@+id/login_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:focusableInTouchMode="true"
            android:hint="@string/username_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/av_login_loading"
            app:layout_constraintVertical_bias="0" />

        <com.miniapp.mystoryapplication.presentation.customview.PasswordInputText
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@id/login_input_username" />

        <include
            android:id="@+id/container_button_login"
            layout="@layout/layout_custom_progress_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/login_input_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:text="@string/login_register_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_button_login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:alpha="0"
            android:padding="0dp"
            android:text="@string/login_register_label"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            app:cornerRadius="25dp"
            app:layout_constraintStart_toEndOf="@id/tv_register_desc"
            app:layout_constraintTop_toTopOf="@+id/tv_register_desc" />

        <include
            android:id="@+id/container_loading_progress"
            layout="@layout/layout_loading_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>