<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_image_result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:transitionName="story_image"
            app:layout_constraintCircleRadius="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/new_story_btn_camera"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toStartOf="@id/btn_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image_result" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_story_btn_gallery"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintTop_toTopOf="@id/btn_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description_notes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:padding="8dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/btn_camera">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description_notes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:focusableInTouchMode="true"
                android:gravity="top|start"
                android:hint="@string/new_story_description_hint"
                android:inputType="textCapSentences|textMultiLine|textImeMultiLine"
                android:maxHeight="100dp"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/new_story_btn_upload"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="@id/til_description_notes"
            app:layout_constraintStart_toStartOf="@id/til_description_notes"
            app:layout_constraintTop_toBottomOf="@id/til_description_notes" />

        <include
            android:id="@+id/container_loading_progress"
            layout="@layout/layout_loading_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
